# BubbleViews

./: .gitignore  .replit  0_dev.md  Claude.md  MVP_Reddit_AI_Agent_Technical_Specification.md  Makefile  README.md  config.json  convert_pdf_to_md.py  pyproject.toml  vercel.json
backend/: .env.example  .gitignore  DAY2_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  alembic.ini  check_routes.py  pyproject.toml  ruff.toml  test_openrouter_real.py
backend/alembic/: README.md  env.py
backend/app/: __init__.py  main.py
backend/data/: faiss_id_map_05542bb0-7c9d-4620-9b6b-09eec4d5d076.pkl  faiss_id_map_0f7cb84b-7ca7-4cc4-8ebc-8c4a5782fd97.pkl  faiss_id_map_10ef68ea-917b-41a1-8d9a-c43ff6dd35a6.pkl  faiss_id_map_138fbf4e-00a7-4e2b-860c-f5a73b57e4d5.pkl  faiss_id_map_1e0ea136-1948-41e0-ba13-6cb08f4718c9.pkl  faiss_id_map_22a3460a-1344-4dd5-a8ee-b243005ab155.pkl  faiss_id_map_3890099a-ba5e-4063-9d0c-eed40d42f747.pkl  faiss_id_map_45a3d32c-9102-44a2-8812-c56c441b5977.pkl  faiss_id_map_5ada86db-d3ff-4be8-8113-8d72985bffe2.pkl  faiss_id_map_653f07b3-29b4-4a71-af88-5bc9261e154f.pkl  faiss_id_map_8a645d29-5ea4-4380-9088-37afa19e1033.pkl  faiss_id_map_92a65f70-ec67-47e5-b2e0-c33dc35109b7.pkl  faiss_id_map_93e33631-802e-4fb7-9345-2d6be920b415.pkl  faiss_id_map_94041a69-dcbb-4168-8457-e29e05c49046.pkl  faiss_id_map_9f990a7b-7103-44fc-a140-ebec31cf7de4.pkl  faiss_id_map_b574cb7a-8848-4d5b-acc4-8db4cf9480c3.pkl  faiss_id_map_d2678a95-b95b-40cf-b430-450509798ffe.pkl  faiss_id_map_e050fa28-1727-4254-a102-fcd7b43abd52.pkl  faiss_id_map_e9771697-da1a-4baa-a8fa-fd0c90eb144c.pkl
backend/scripts/: create_persona.py  export_openapi.py  generate_openapi.py  generate_openapi_simple.py  run_agent.py  run_coverage.py  seed_admin.py  seed_default_config.py  seed_demo.py  seed_interactions.py  sync_reddit_history.py  test_openrouter_manual.py
backend/tests/: conftest.py  manual_security_verification.py  test_agent_loop.py  test_auth.py  test_auth_endpoints.py  test_auto_relationship_creation.py  test_belief_updater.py  test_config_validation.py  test_database.py  test_database_simple.py  test_day3_config.py  test_governor.py  test_health_endpoints.py  test_middleware.py  (+13 more)
(+163 files in other folders)
